--- a/SPCK/style.css
+++ b/SPCK/style.css
@@ -1,7 +1,8 @@
 body{
-    margin: 0px 100px 0px 100px;
+    margin: 0px 10% 0px 10%;
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
+    background-color: peachpuff;
 }
 
 .logo{
@@ -21,7 +22,7 @@ h1{
 .navbar{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
     margin: 0px;
 }
@@ -29,7 +30,8 @@ h1{
 .button{
     color: #da3c3c;
     text-align: center;
-    padding: 5px 50px 5px 30px;
+    width: 12%;
+    padding: 5px 3.75% 5px 3.75%;
     font-size: 22px;
     vertical-align: middle;
     font-weight: 400;
@@ -42,3 +44,57 @@ h1{
     color: peachpuff;
 }
 
+.banner{
+    width: 100%;
+    padding: 50px 0px 50px 0px;
+}
+
+h2{
+    color: rgb(112, 0, 37);
+    font-size: 27px;
+    width: fit-content;
+    vertical-align: middle;
+    padding: 0px 0px 10px  0px;
+    border-bottom: #da3c3c solid 3px;
+}
+
+.prod{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0px;
+}
+
+.item{
+    width: 16%;
+    height: 230px;
+    margin: 2%;
+    padding: 2%;
+    border: grey solid 1px;
+}
+
+.item p{
+    color: #116e00c4;
+    text-align: center;
+}
+
+.item img{
+    width: 100%;
+    height: 170px;
+}
+
+.down{
+    border: grey solid 1px;
+    background-color: rosybrown;
+}
+.down p{
+    color: red;
+}
+
+.contact{
+    background-color: salmon;
+    margin-bottom: -1.5%;
+}
+.contact p{
+    margin: 0% 0% 2% 5%;
+}
